--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <meta name="description" content="Український аналог гри Wordle. У вас буде 8 спроб, щоб відгадати слово з 5-7 букв. Нова загадка кожного дня.">
     <meta property="og:title" content="PALYANYTSYA - вгадай слово з 8 спроб">
     <meta property="og:description" content="Український аналог гри Wordle. У вас буде 8 спроб, щоб відгадати слово з 5-7 букв. Нова загадка кожного дня.">
+    <script type="module" crossorigin src="/assets/index.4fb33218.js"></script>
+    <link rel="modulepreload" href="/assets/vendor.b9a4765d.js">
+    <link rel="stylesheet" href="/assets/index.5729ceec.css">
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    
   </body>
 </html>
