--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ua">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PALYANYTSYA - вгадай слово з 8 спроб</title>
     <meta name="description" content="Український аналог гри Wordle. У вас буде 8 спроб, щоб відгадати слово з 5-7 букв. Нова загадка кожного дня.">
     <meta property="og:title" content="PALYANYTSYA - вгадай слово з 8 спроб">
     <meta property="og:description" content="Український аналог гри Wordle. У вас буде 8 спроб, щоб відгадати слово з 5-7 букв. Нова загадка кожного дня.">
-    <script type="module" crossorigin src="/assets/index.c68e950d.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.b9a4765d.js">
-    <link rel="stylesheet" href="/assets/index.53080cb5.css">
+    
+    
+    <link rel="shortcut icon" href="ico.png" type="image/x-icon">
+    <link rel="apple-touch-icon" href="ico.png">
+    <meta property="og:image" content="ico.png">
+    <meta name="twitter:image" content="ico.png">
+
+    <script type="module" crossorigin src="/assets/index.f09dfa58.js"></script>
+    <link rel="modulepreload" href="/assets/vendor.ac5dd118.js">
+    <link rel="stylesheet" href="/assets/index.51a56a8e.css">
+
   </head>
   <body>
     <div id="app"></div>
