--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PALYANYTSYA - вгадай слово з 8 спроб</title>
-    <meta name="description" content="Український аналог гри Wordle. У вас буде 8 спроб, щоб відгадати слово з 5-7 букв. Нова загадка кожного дня.">
+    <meta name="description" content="Український аналог гри Wordle. У вас буде 8 спроб, щоб відгадати слово з 5-7 букв. Загадай слово другу. Нова загадка кожного дня.">
     <meta property="og:title" content="PALYANYTSYA - вгадай слово з 8 спроб">
-    <meta property="og:description" content="Український аналог гри Wordle. У вас буде 8 спроб, щоб відгадати слово з 5-7 букв. Нова загадка кожного дня.">
+    <meta property="og:description" content="Український аналог гри Wordle. У вас буде 8 спроб, щоб відгадати слово з 5-7 букв. Загадай слово другу. Нова загадка кожного дня.">
     
     
     <link rel="shortcut icon" href="ico.png" type="image/x-icon">
