--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
   </head>
   <body>
     <div id="app"></div>
-    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LDHKHC564T"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LDHKHC564T');
+</script>
   </body>
 </html>
